Alteração das chamadas das instancias com TSYRINGE
